# SENG468

./: .dockerignore  .editorconfig  .gitignore  README.md  cli.go  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  testLog  user_s.txt  user_t.txt
cache/: cache.go  go.mod
examples/: databaseupdate.json  databaseupdate.txt  mongo_connect_example.go  test.go  test2.go
polling_service/: Dockerfile  go.mod  polling_service.go
quote_server/: .dockerignore  .gitignore  Dockerfile  go.mod  quote_server.go
requests/: Dockerfile
requests/src/: requests.go
server/: Dockerfile
server/src/: mongo_reader.go  mongo_writer.go  server.go
server/src/static/: index.html
testing/: Dockerfile  polling_service_test.py  quote_server_test.py  tests.py  tserver_test.py
transaction-server/: .gitignore  Dockerfile  README.md  cache.go  cli.go  go.mod  go.sum  logging.go  mongo_reader.go  mongo_util.go  mongo_writer.go  transaction-server.go
web-server/: go.mod  webserver.go
web-ui/: .dockerignore  .gitignore  Dockerfile  config.toml  logging.json  poetry-requirements.txt  pyproject.toml
web-ui-load-balancer/: Dockerfile  nginx.conf
web-ui/static/css/: main.css
web-ui/templates/: base.html  fund.html  home.html  login.html  trade.html
web-ui/web_ui/: asgi.py  authentication.py  config.py  middleware.py  util.py
