[tool.poetry]
name = "web-ui"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

Jinja2 = "^3.1.2"
gunicorn = "^20.1.0"
httpx = "^0.23.3"
starlette = "^0.26.1"
uvicorn = "^0.21.1"

# subset of uvicorn[standard]:
httptools = {version = "^0.5.0", optional = true}
uvloop = {version = "^0.17.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
inotify = "^0.2.10"
reorder-python-imports = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
